# ai-trading-agent

./: .env.example  README.md  pyproject.toml
src/: config_loader.py  main.py
src/agent/: decision_maker.py
src/indicators/: hyperliquid_indicators.py
src/sentiment/: __init__.py  x_sentiment.py
src/trading/: hyperliquid_api.py
