[tool.poetry]
name = "trading-agent"
version = "0.1.0"
description = ""
authors = ["Gajesh Naik <26431906+Gajesh2007@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
hyperliquid-python-sdk = "^0.20.0"
python-dotenv = "^1.1.1"
web3 = "^7.14.0"
aiohttp = "^3.13.1"
openai = "^2.5.0"
requests = "^2.32.5"
rich = "^14.2.0"
numpy = "^1.26.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"